fix(BlipSelect and Button): Layout fixes and scrollbar to select options

--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -292,4 +292,7 @@
   &.bp-btn--bg-sky {
     @include bp-btn--bg($bp-color-sky);
   }
+
+  @include bp-btn--no-background();
+  @include bp-btn--no-border();
 }
